--- a/src/PrestaShopBundle/Resources/config/services/core/domain/country.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/domain/country.yml
@@ -1,6 +1,7 @@
 services:
   _defaults:
     autowire: true
+    public: false
 
   PrestaShop\PrestaShop\Core\Domain\Country\ZipCodePatternResolverInterface: '@PrestaShop\PrestaShop\Core\Domain\Country\ZipCodePatternResolver'
   PrestaShop\PrestaShop\Core\Domain\Country\ZipCodePatternResolver:
