Fixed thumbnail error not working correctly
# Conflicts:
#	src/PrestaShopBundle/Resources/config/services/core/category.yml

--- a/src/PrestaShopBundle/Resources/config/services/core/category.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/category.yml
@@ -10,3 +10,5 @@ services:
   prestashop.core.category.name_builder.category_display_name_builder:
     alias: PrestaShop\PrestaShop\Core\Category\NameBuilder\CategoryDisplayNameBuilder
     deprecated: ~
+
+  PrestaShop\PrestaShop\Core\Category\Provider\MenuThumbnailAvailableKeyProvider:
