--- a/app/config/security_dev.yml
+++ b/app/config/security_dev.yml
@@ -25,7 +25,7 @@ security:
       security: false
 
     api:
-      pattern: ^/new-api
+      pattern: '^%api_base_path%'
       stateless: true
       provider: 'oauth2'
       guard:
