--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type/webservice.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type/webservice.yml
@@ -1,14 +1,10 @@
 services:
   _defaults:
-    public: true
+    public: false
+    autowire: true
 
-  form.type.webservice.webservice_key_type:
-    class: 'PrestaShopBundle\Form\Admin\Configure\AdvancedParameters\Webservice\WebserviceKeyType'
-    parent: 'form.type.translatable.aware'
-    public: true
+  PrestaShopBundle\Form\Admin\Configure\AdvancedParameters\Webservice\WebserviceKeyType:
     arguments:
-      - '@=service("prestashop.adapter.multistore_feature").isUsed()'
-      - '@=service("prestashop.adapter.form.choice_provider.resources_choice_provider").getChoices()'
-      - '@=service("prestashop.core.form.choice_provider.permissions_choice_provider").getChoices()'
-    tags:
-      - { name: form.type }
+      $isMultistoreFeatureUsed: '@=service("prestashop.adapter.multistore_feature").isUsed()'
+      $resourceChoices: '@=service("prestashop.adapter.form.choice_provider.resources_choice_provider").getChoices()'
+      $permissionChoices: '@=service("prestashop.core.form.choice_provider.permissions_choice_provider").getChoices()'
