--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,3 +1,6 @@
+includes:
+	- phpstan-baseline.neon
+	- phpstan-disallowed-calls.neon
 parameters:
   level: 5
   bootstrapFiles:
@@ -73,118 +76,3 @@ parameters:
     - PaymentModuleCore::DEBUG_MODE
     - _PS_API_IN_USE_
     - _PS_ALLOW_MULTI_STATEMENTS_QUERIES_
-  disallowedNamespaces:
-        -
-            class: 'Symfony\Component\Translation\TranslatorInterface'
-            message: 'use Symfony\Contracts\Translation\TranslatorInterface instead'
-            disallowIn:
-                - src/*
-        -
-            class: 'Symfony\Component\Translation\TranslatorInterface'
-            message: 'use Symfony\Contracts\Translation\TranslatorInterface instead'
-            disallowIn:
-                - src/Core/*
-  disallowedMethodCalls:
-        -
-            method: 'PrestaShopBundle\Form\Admin\Type\CommonAbstractType::getConfiguration()'
-            message: 'Use dependency injection instead'
-            disallowIn:
-                - src/*
-  disallowedConstants:
-        -
-            constant:
-                - '_LEGACY_PS_CREATION_DATE'
-                - '_LEGACY_PS_CACHE_ENABLED'
-                - '_LEGACY_PS_CACHING_SYSTEM_'
-                - '_LEGACY_COOKIE_KEY_'
-                - '_LEGACY_COOKIE_IV_'
-                - '_LEGACY_DB_PREFIX_'
-                - '_LEGACY_DB_SERVER_'
-                - '_LEGACY_DB_USER_'
-                - '_LEGACY_DB_PASSWD_'
-                - '_LEGACY_DB_NAME_'
-                - '_LEGACY_MYSQL_ENGINE_'
-                - '_DB_SERVER_'
-                - '_DB_NAME_'
-                - '_DB_USER_'
-                - '_DB_PASSWD_'
-                - '_MYSQL_ENGINE_'
-                - '_COOKIE_KEY_'
-                - '_COOKIE_IV_'
-                - '_DB_PREFIX_'
-                - '_PS_SSL_PORT_'
-                - '_THEME_NAME_'
-                - '_THEME_COL_DIR_'
-                - '_PARENT_THEME_NAME_'
-                - '__PS_BASE_URI__'
-                - '_PS_API_URL_'
-                - '_PS_CACHE_ENABLED_'
-                - '_PS_CACHING_SYSTEM_'
-                - '_PS_CREATION_DATE_'
-                - '_PS_INSTALL_PATH_'
-                - '_PS_INSTALL_DATA_PATH_'
-                - '_PS_INSTALL_LANGS_PATH_'
-                - '_PS_INSTALL_FIXTURES_PATH_'
-                - '_PS_INSTALL_VERSION_'
-                - '_PS_PRICE_DISPLAY_PRECISION_'
-                - '_PS_PRICE_COMPUTE_PRECISION_'
-                - '_PS_OS_CHEQUE_'
-                - '_PS_OS_PAYMENT_'
-                - '_PS_OS_PREPARATION_'
-                - '_PS_OS_SHIPPING_'
-                - '_PS_OS_DELIVERED_'
-                - '_PS_OS_CANCELED_'
-                - '_PS_OS_REFUND_'
-                - '_PS_OS_ERROR_'
-                - '_PS_OS_OUTOFSTOCK_'
-                - '_PS_OS_OUTOFSTOCK_PAID_'
-                - '_PS_OS_OUTOFSTOCK_UNPAID_'
-                - '_PS_OS_BANKWIRE_'
-                - '_PS_OS_PAYPAL_'
-                - '_PS_OS_WS_PAYMENT_'
-                - '_PS_OS_COD_VALIDATION_'
-                - '_PS_THEME_DIR_'
-                - '_PS_BASE_URL_'
-                - '_MODULE_DIR_'
-                - '_THEME_PROD_DIR_'
-                - '_THEME_PROD_PIC_DIR_'
-                - '_NEW_COOKIE_KEY_'
-                - '_MAIL_DIR_'
-                - '_PS_IMG_'
-                - '_PS_PARENT_THEME_DIR_'
-                - '_PS_API_MODULES_LIST_16_'
-                - '_PS_CURRENCY_FEED_URL_'
-                - '_PS_DEFAULT_THEME_NAME_'
-                - '_PS_INSTALL_CONTROLLERS_PATH_'
-                - '_PS_INSTALL_MAXIMUM_PHP_VERSION_'
-                - '_PS_INSTALL_MAXIMUM_PHP_VERSION_ID_'
-                - '_PS_INSTALL_MINIMUM_PHP_VERSION_'
-                - '_PS_INSTALL_MINIMUM_PHP_VERSION_ID_'
-                - '_PS_JS_DIR_'
-                - '_PS_PARENT_THEME_URI_'
-                - '_PS_TAB_MODULE_LIST_URL_'
-                - '_PS_THEME_SELECTED_DIR_'
-                - '_PS_THEME_URI_'
-                - '_PS_TMP_IMG_'
-                - '_THEME_CAT_DIR_'
-                - '_THEME_CSS_DIR_'
-                - '_THEME_DIR_'
-                - '_THEME_EMPLOYEE_DIR_'
-                - '_THEME_GENDERS_DIR_'
-                - '_THEME_IMG_DIR_'
-                - '_THEME_JS_DIR_'
-                - '_THEME_LANG_DIR_'
-                - '_THEME_MANU_DIR_'
-                - '_THEME_SHIP_DIR_'
-                - '_THEME_STORE_DIR_'
-                - '_THEME_SUP_DIR_'
-                - '_THEME_PROFILE_DIR_'
-                - '_THEMES_DIR_'
-                - 'PS_INSTALLATION_LOCK_FILE'
-            message: 'Use dependency injection instead'
-            disallowIn:
-                - src/PrestaShopBundle/*
-                - src/Core/*
-            allowIn:
-                - src/Adapter/*
-                - src/PrestaShopBundle/Install/*
