Addid feature flags for rest of migrated pages

--- a/src/PrestaShopBundle/Resources/config/routing/admin/improve/international/tax_rules_groups.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/improve/international/tax_rules_groups.yml
@@ -4,7 +4,8 @@ admin_tax_rules_groups_index:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Improve\International\TaxRulesGroupController::indexAction
     _legacy_controller: AdminTaxRulesGroup
-#  _legacy_link: AdminTaxRulesGroup
+    _legacy_link: AdminTaxRulesGroup
+    _legacy_feature_flag: tax_rules_group
 
 admin_tax_rules_groups_search:
   path: /
@@ -14,7 +15,8 @@ admin_tax_rules_groups_search:
     gridDefinitionFactoryServiceId: prestashop.core.grid.definition.factory.tax_rules_group
     redirectRoute: admin_tax_rules_groups_index
     _legacy_controller: AdminTaxRulesGroup
-#  _legacy_link: AdminTaxRulesGroup:submitFiltertax_rules_group
+    _legacy_link: AdminTaxRulesGroup:submitFiltertax_rules_group
+    _legacy_feature_flag: tax_rules_group
 
 admin_tax_rules_groups_create:
   path: /new
@@ -22,7 +24,8 @@ admin_tax_rules_groups_create:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Improve\International\TaxRulesGroupController::createAction
     _legacy_controller: AdminTaxRulesGroup
-#  _legacy_link: AdminTaxRulesGroup:addtax_rules_group
+    _legacy_link: AdminTaxRulesGroup:addtax_rules_group
+    _legacy_feature_flag: tax_rules_group
 
 admin_tax_rules_groups_edit:
   path: /{taxRulesGroupId}/edit
@@ -30,7 +33,8 @@ admin_tax_rules_groups_edit:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Improve\International\TaxRulesGroupController::editAction
     _legacy_controller: AdminTaxRulesGroup
-    #  _legacy_link: AdminTaxRulesGroup:updatetax_rules_group
+    _legacy_link: AdminTaxRulesGroup:updatetax_rules_group
+    _legacy_feature_flag: tax_rules_group
     _legacy_parameters:
       id_tax_rules_group: taxRulesGroupId
   requirements:
@@ -42,7 +46,8 @@ admin_tax_rules_groups_delete:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Improve\International\TaxRulesGroupController::deleteAction
     _legacy_controller: AdminTaxRulesGroup
-    #  _legacy_link: AdminTaxRulesGroup:deletetax_rules_group
+    _legacy_link: AdminTaxRulesGroup:deletetax_rules_group
+    _legacy_feature_flag: tax_rules_group
     _legacy_parameters:
       id_tax_rules_group: taxRulesGroupId
   requirements:
@@ -54,7 +59,8 @@ admin_tax_rules_groups_toggle_status:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Improve\International\TaxRulesGroupController::toggleStatusAction
     _legacy_controller: AdminTaxRulesGroup
-    #  _legacy_link: AdminTaxRulesGroup:statustax_rules_group
+    _legacy_link: AdminTaxRulesGroup:statustax_rules_group
+    _legacy_feature_flag: tax_rules_group
     _legacy_parameters:
       id_tax_rules_group: taxRulesGroupId
   requirements:
@@ -66,7 +72,8 @@ admin_tax_rules_groups_bulk_enable_status:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Improve\International\TaxRulesGroupController::bulkEnableStatusAction
     _legacy_controller: AdminTaxRulesGroup
-#  _legacy_link: AdminTaxRulesGroup:submitBulkenableSelectiontax_rules_group
+    _legacy_link: AdminTaxRulesGroup:submitBulkenableSelectiontax_rules_group
+    _legacy_feature_flag: tax_rules_group
 
 admin_tax_rules_groups_bulk_disable_status:
   path: /bulk-disable-status
@@ -74,7 +81,8 @@ admin_tax_rules_groups_bulk_disable_status:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Improve\International\TaxRulesGroupController::bulkDisableStatusAction
     _legacy_controller: AdminTaxRulesGroup
-#  _legacy_link: AdminTaxRulesGroup:submitBulkdisableSelectiontax_rules_group
+    _legacy_link: AdminTaxRulesGroup:submitBulkdisableSelectiontax_rules_group
+    _legacy_feature_flag: tax_rules_group
 
 admin_tax_rules_groups_bulk_delete:
   path: /bulk-delete
@@ -82,4 +90,5 @@ admin_tax_rules_groups_bulk_delete:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Improve\International\TaxRulesGroupController::bulkDeleteAction
     _legacy_controller: AdminTaxRulesGroup
-#  _legacy_link: AdminTaxRulesGroup:submitBulkdeletetax_rules_group
+    _legacy_link: AdminTaxRulesGroup:submitBulkdeletetax_rules_group
+    _legacy_feature_flag: tax_rules_group
